--- a/Exercício 1/css/style.css
+++ b/Exercício 1/css/style.css
@@ -2,6 +2,7 @@
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 body {
+  box-sizing: border-box;
   margin: 0;
   display: block;
   justify-content: center;
@@ -13,7 +14,7 @@ body {
   margin: 0 auto;
   padding: auto;
   background-color: #fff;
-  display:block;  
+  display:block;
 }
 .color{
   background-color: #f3f3f3;
@@ -31,6 +32,7 @@ h2 {
 }
 .navbar {
   background-color: #f3f3f3;
+  justify-content: center;
 }
 .navbar-menu{
   list-style: none;
@@ -77,6 +79,9 @@ h2 {
   margin: auto;
   border-radius: 15px;
 }
+.menu-items {
+  padding-bottom: 20px;
+}
 table {
   margin: auto;
   width: 75%;
@@ -107,6 +112,10 @@ td{
 }
 .info {
   text-align: center;
+}
+.table-content {
+  margin-bottom: 25px;
+  margin-top: 10px;
 }
 
 /* ABOUT */
@@ -148,6 +157,12 @@ td{
 }
 iframe {
   border-radius: 10px;
+  align-items: center;
+  max-width: 100%;
+  max-height: 100%;
+}
+.social {
+  margin-right: 30px;
 }
 
 /* CONTACT */
@@ -167,6 +182,26 @@ iframe {
   margin: auto;
   margin-bottom: 15px;
   margin-top: 15px;
+  padding-top: 10px;
+  padding: auto;
+}
+
+.contact-form {
+  display:flex;
+  flex-direction: column;
+  border-radius: 5px;
+
+}
+.form-text1 {
+  text-align: center;
+}
+.btn-light{
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+}
+.btn-light:hover{
+  background-color: #f3f3f3;
 }
 
 /* FOOTER */
@@ -177,6 +212,7 @@ footer{
 }
 
 /* CONTACT PAGE */
+
 .contact p {
   margin: 5px 0;
   color: #555;
@@ -203,4 +239,35 @@ footer{
 }
 .contact .social-buttons a.instagram {
   background-color: #e4405f;
+}
+
+@media(max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    height: 120px;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    float:none;
+  }
+  .content {
+    margin-bottom: 20px;
+  }
+  .navbar-menu {
+    padding: 0px 0px;
+    margin-top: 5px 5px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+
+  .content {
+    flex-direction: column;
+    flex: 100%;
+    max-width: 100%;
+  }
+
+  .team img {
+    width: 70%;
+  }
 }
